added entry 003 004 exb

--- a/bitcoin.html
+++ b/bitcoin.html
@@ -41,16 +41,7 @@
   </style>
 
 </head>
-a:link { text-decoration: none; }
 
-
-a:visited { text-decoration: none; }
-
-
-a:hover { text-decoration: none; }
-
-
-a:active { text-decoration: none; }
 <body>
   <header>
     <div class="header">
@@ -73,20 +64,60 @@ a:active { text-decoration: none; }
             </br>
               <a href="./bitcoin.pdf" style="text-decoration: none;"><button style="color: #F2A900; display: block; margin-left: auto; margin-right: auto;">READ THE BITCOIN WHITEPAPER</button></a>
             </br></br>
-              <!--<div id = "entry 003" class = "twelve columns">
-		            <h3><strong>HEAD 3</strong></h3>
-		              <h4>SUBHEAD 3</h4>
-			            <div class = "ten columns"><figure><a href="./img/ExB_banner.png"><img class = "twelve columns" src="./img/ExB_banner.png" alt="Everything&#215Bitcoin Banner"></a></figure></div>
-		              <p class = "twelve columns">p3</p>
-		            </br></br>
-		            </div>-->
-                <div id = "entry 002" class = "twelve columns">
+            <div id = "entry 004" class = "twelve columns">
+              <h3><strong>MORALITY OF ENERGY USE</strong></h3>
+                <h4>A look at Greenpeace and Ripple's campaign to &#034Change the Code&#034.</h4>
+                <div class = "ten columns"><figure><a href="./img/ExB_banner.png"><img class = "twelve columns" src="./img/ExB_banner.png" alt="Everything&#215Bitcoin Banner"></a></figure></div>
+                <p class = "twelve columns">Set aside Bitcoin&#039s use as the most secure, permissionless, decentralized monetary network the world has ever seen for now. 
+
+                  Simply taking a look at energy, we have been taught that wasting energy is not good: &#034turn the light off when you leave&#034, &#034shut the front door, you&#039re letting all the heat out&#034, &#034shut off the engine you&#039re goin to waste gas&#034. Efficient energy use is important, one should arguably not use more than they need to complete a certain task. It doesn&#039t make economic sense, and some argue it doesn’t make moral sense. &#039Finish your plate, people are starving in Africa”. 
+                </br></br>
+                  Funny that you mention Africa. Compared to members of the highest GDP members of the Western and Eastern Worlds which comprises the Global North, the Global South uses a fraction of the energy both nominal and per capita. Energy consumption has correlations with positive outcomes including reduction of food scarcity, increased economic participation, and disaster survivability. Our modern world, and its winners are decided by use of energy.
+                </br></br>
+                  In December of 2022, Jack Dorsey, former CEO of Twitter and now bitcoin-focused financial services company Block, partnered with Gridless Compute to stand up a small-scale hydroelectric generation facility in Kenya which through the use of colocated bitcoin mining, provides 500 families with local affordable energy for the first time, cutting the rate by more than half at bitcoin&#039s current mining conditions. The protocol’s direct tie to energy makes this possible. This configuration can be replicated throughout Africa, Latin America and Southeast Asia, targeting stranded energy as the &#034buyer of first resort&#034. This is one of the most noble of energy uses I can think of, wouldn&#039t you agree? Perhaps in time, incentivized build out of stranded renewable energy across and by the Global South will allow for thriving communities that can escape the historic oppression of former colonial nations.
+                </br></br>
+                  Let us also look at bitcoin as a &#034buyer of last resort&#034 that is, a buyer for already consumed energy would otherwise be wasted due to inability to be transferred, sold, or otherwise used by the market. Again, we do not care about bitcoin as an asset, simply how its mining equipment functions in a &#034good&#034 use of energy.
+                </br></br>
+                  A recent study on the scale of methane emissions was published which highlighted the immense amount of leakage that still occurs despite flaring practices being required among the Western World. The burning of excess natural gas is done because energy generators have to be able to provide an amount of power that is demanded at any moment, in order to keep our civilization running, but are unable to put gas back into the ground once tapped for that base load amount. Despite best efforts, wind moving across the flare stacks and efficiency limits of the practice still allow leakage of methane, which is 80 times more warming than carbon dioxide during the most concentrated time in the atmosphere.
+                </br></br>
+                  Enter colocated bitcoin mining, where they are capturing that waste methane, and running it through a generator to negate methane emissions, using that energy for their own purposes, but having the additional benefits of providing load-balancing to the grid, and unprecedented mitigation of one of the most damaging GHG to the atmosphere. Companies such as Vespene Energy are also targeting methane outgassing from landfills, particularly those of smaller scale that are unable to afford expensive methane recapture systems. Currently, Bitcoin is on a path to reduce warming by 0.5 degrees celsius, or 33 percent of the IPCC&#034s goal, this side of the century. This would buy us more time, something climate experts would agree is direly needed. 
+                </br></br>
+                  As you can see, energy used in appropriate ways can be net beneficial to people and their environment. Proof of work is the foundation of life, and energy is a necessary component of that. We should celebrate a technology which allows for more efficient use and conservation of our resources.
+                  
+                  </p>
+              </br></br>
+            </div>
+            <div id = "entry 003" class = "twelve columns">
+              <h3><strong>CALLING OUT DEFECTIVE ALTRUISM</strong></h3>
+                <h4>A look at Greenpeace and Ripple's campaign to &#034Change the Code&#034.</h4>
+                <div class = "ten columns"><figure><a href="./img/ExB_banner.png"><img class = "twelve columns" src="./img/ExB_banner.png" alt="Everything&#215Bitcoin Banner"></a></figure></div>
+                <p class = "twelve columns">Near the beginning of 2022, Twitter account @CleanUpBitcoin entered the scene on a mission: convince environmentally conscious consumers that Bitcoin uses &#034too much energy&#034 and that the quick and easy solution to &#034Change the Code&#034 would put Bitcoin on the right path.
+                  Their concerns are not new, in fact a number of Bitcoiners (myself included) had this same moral quandary themselves. There is no dodging it, Bitcoin uses energy measuring in Terawatts, no small amount.
+                  The argument predicates itself on a few assumptions:
+                  </br></br>1. Energy use is unilaterally harmful and should be curtailed.
+                </br></br>2. An edit to Bitcoin&#039s source code will force the millions of nodes running the software to update to the edited version.
+              </br></br>3. Bitcoin provides no use that something else that uses less energy can not do.
+            </br></br>Before we begin to dismantle these points, it is important to disclose some context. The Change the Code campaign was funded by Chris Larsen, CEO of Ripple, who created and awarded 
+                    themselves a majority of the cryptocurrency they created, XRP. Ripple, the centralized corporation aligned with the &#034too big to fail&#034 banking industry, is currently under 
+                    investigation by the United Stated government Securities and Exchange Commision. Chris Larsen donated $5 million USD to Greenpeace in what appears to be an effort to thwart its 
+                    greatest competitor, an open source protocol voluntarily adopted by millions. This amount is reported to be around half of the subsidiary responsible for the campaign, GreenpeaceUSA&#039s 
+                    annual operating budget. Chris Larsen would accumulate a return of billions of dollars if his campaign was successful. The account has gone so far as to delete its own tweets that were 
+                    discovered to highlight the positive effects of Bitcoin&#039s energy use.
+                  </p>
+              </br></br>
+            </div>
+            <div id = "entry 002" class = "twelve columns">
 	                <h3><strong>WASTE NOT, WANT NOT</strong></h3>
 	                <h4>#mine4heat: rethinking waste in heating applications.</h4>
 			            <div class = "ten columns"><figure><a href="./img/mine4heat.PNG"><img class = "twelve columns" src="./img/mine4heat.PNG" alt="Everything&#215Bitcoin Banner"></a></figure></div>
-                  <p class = "twelve columns"></br></br>Bitcoin is an open network that allows users to acquire, store, and transact value in a way that is permissionless, without an intermediary, and with minimized trust between either party. Specialized computers, Bitcoin ASICs which are commonly called &#34miners&#34, work to batch these transactions and insert them into the globally distributed ledger. Miner operators are incentivised to find the cheapest sources of energy, which increasingly are wasted, stranded, renewable and GHG emission mitigating sources. 
-                    </br></br>Like all computers, the power (measured in Watts) required to compute, known in bitcoin as hashpower, is efficiently transformed into heat (measured in BTU). This heat byproduct can be captured and used to perform additional work. Miner operators around the world have begin to capture and make use of their computer equipment's thermal energy to heat their homes, pools, greenhouses and even aquatic fish ponds. 
-                    </br></br>Often described as &#034wasted energy&#034, it is becoming increasingly clear that traditional radiant heating is wasteful in that the same amount of Watts, directly related to BTUs, could additionally be securing the hardest monetary network in existience. As we continue to devise new ways to utilize Bitcoin's close ties to energy, what will the world look like in another 14 years, 7 halvings into the monetary network's lifespan. Time (and energy) will tell.
+                  <p class = "twelve columns"></br></br>Bitcoin is an open network that allows users to acquire, store, and transact value in a way that is permissionless, without an intermediary, and with minimized trust 
+                    between either party. Specialized computers, Bitcoin ASICs which are commonly called &#34miners&#34, work to batch these transactions and insert them into the globally distributed ledger. 
+                    Miner operators are incentivised to find the cheapest sources of energy, which increasingly are wasted, stranded, renewable and GHG emission mitigating sources. 
+                    </br></br>Like all computers, the power (measured in Watts) required to compute, known in bitcoin as hashpower, is efficiently transformed into heat (measured in BTU). This heat byproduct 
+                    can be captured and used to perform additional work. Miner operators around the world have begin to capture and make use of their computer equipment's thermal energy to heat their homes, pools, greenhouses and even aquatic fish ponds. 
+                    </br></br>Often described as &#034wasted energy&#034, it is becoming increasingly clear that traditional radiant heating is wasteful in that the same amount of Watts, directly related to BTUs, 
+                    could additionally be securing the hardest monetary network in existience. As we continue to devise new ways to utilize Bitcoin's close ties to energy, what will the world look like in another 14 years, 
+                    7 halvings into the monetary network's lifespan. Time (and energy) will tell.
                   </p>
 		              </br></br>
 		            </div>
@@ -94,8 +125,12 @@ a:active { text-decoration: none; }
 	                <h3><strong>THE GENESIS OF <strong style="color: #F2A900;">BITCOIN</strong>, 14 YEARS LATER</strong></h3>
 	                <h4>Rebuilding our world in Satoshi's image.</h4>
 			            <div class = "ten columns"><figure><a href="./img/ExB_banner.png"><img class = "twelve columns" src="./img/ExB_banner.png" alt="Everything&#215Bitcoin Banner"></a></figure></div>
-                  <p class = "twelve columns"></br></br>Throughout humanity's existence, crucial technological breakthroughs have allowed us to thrive and move far beyond our limitations. Since our first discovery of fire, we have found ways to transform and transport energy in new, revolutionary ways. These innovations have spurred radical new ways of interacting, harnessing the potential of our planet's finite resources to form the future of our civilization's social, economic, political and geographic order.
-                    </br></br>January 3, 2009, humanity discovered digital scarcity. Through proof of work, energy and time are expended like with monies of ancient times. The work performed by these specialized computers secures the network, and the operators are given their bounty on a disinflationary schedule. In addition to storing work energy across time, Bitcoin's unique relationship with wasted and stranded energy allows for innovation across built infrastructure. A mere 14 years later, we are beginning to see the potential that bitcoin offers.
+                  <p class = "twelve columns"></br></br>Throughout humanity's existence, crucial technological breakthroughs have allowed us to thrive and move far beyond our limitations. Since our first discovery of fire, we have found ways to 
+                    transform and transport energy in new, revolutionary ways. These innovations have spurred radical new ways of interacting, harnessing the potential of our planet's finite resources to form the future of our civilization's social, 
+                    economic, political and geographic order.
+                    </br></br>January 3, 2009, humanity discovered digital scarcity. Through proof of work, energy and time are expended like with monies of ancient times. The work performed by these specialized computers secures the network, 
+                    and the operators are given their bounty on a disinflationary schedule. In addition to storing work energy across time, Bitcoin's unique relationship with wasted and stranded energy allows for innovation across built infrastructure. 
+                    A mere 14 years later, we are beginning to see the potential that bitcoin offers.
                     </br></br>Humanity's proof of work today must provide for tomorrows' generations. With bitcoin, it can.
                     </br></br></p>
                   </br></br>
