--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <meta name="description" content="">
   <meta name="author" content="Theodore Lessman">
 
+  <!-- nostr -->
+  <meta http-equiv="refresh" content="5 url=theospatial.github.io">
+
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
