updated index/about, migrated bitcoin content, added banner to works, added IKF award and image

--- a/bitcoin.html
+++ b/bitcoin.html
@@ -64,6 +64,21 @@
             </br>
               <a href="./bitcoin.pdf" style="text-decoration: none;"><button style="color: #F2A900; display: block; margin-left: auto; margin-right: auto;">READ THE BITCOIN WHITEPAPER</button></a>
             </br></br>
+            <div>
+              <h4 class="noteworthy" style="color: #F2A900;"> Bitcoiner. Pleb Miner. 2140 hr+ Orange Pill.</h4>
+              <h4>Fighting environmental hypocrisy and economic colonialism.</br>
+              Find me on: birdapp:<a href="https://twitter.com/everythingxbtc">@everythingxbtc</a> nostr:<a href="https://astral.ninja/npub1enfjvvrakj3fc0r6pn8ftm2dkzpzwvd598lr8hez6qz76zm8vxusf009vf">@everythingxbtc</a></h4>
+              <blockquote class = 'nine columns' style="margin: 1em; border-style: solid; border-color: #F2A900; border-left: 0em; border-top: 0em; border-bottom: 0em;">"I&#39ve been active in bitcoin&#39s network since 2019. At some point I became convinced there was a way to fix the global monetary system and couldn&#39t resist to keep thinking about it."</br><figcaption style="margin-left: 3em;">~ Me, <cite>not Satoshi Nakamoto</cite></f></blockquote>
+            </br>
+            <p class="twelve columns">
+              I am always open to opportunities to serve as a customer oriented bitcoin technologist for <strong style="color: #F2A900;">Bitcoin</strong><strong> only companies</strong>. 
+              I enjoy meaningful customer interactions and strive to transfer my years of experience in retail customer service and support to transform they way businesses connect with their customers through implementing <strong style="color: #F2A900;">Lightning</strong> POS systems, seamless UX, and intuitive UI.
+              I continue to expand my knowledge in programming, design, and cutting edge technologies, and take pride in serving my customers with honesty, accessibility, and education.
+              I will contribute my technical, analytical, visualization, and communication skills to provide exceptional products and services, to work towards data-driven policy change and to develop innovative applications, products, and experiences.
+           </br></p>  
+          </div>
+            
+          
             <div id = "entry 004" class = "twelve columns">
               <h3><strong>MORALITY OF ENERGY USE</strong></h3>
                 <h4>A look at Greenpeace and Ripple's campaign to &#034Change the Code&#034.</h4>
@@ -136,6 +151,7 @@
                   </br></br>
 		              </div>
                 </div>
+                <h3><a class = "twelve columns" href="portfolio.html">My work before finding <strong style="color: #F2A900;">Bitcoin</strong>.</a></h3>
                 <div class = "twelve columns" id="contact">
 		              <a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a> 
 	                <a href="https://www.linkedin.com/in/theodorelessman/"><button class = "footbutton">in/theodorelessman</button></a></h2>
