--- a/works.html
+++ b/works.html
@@ -36,6 +36,17 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   
+  <header>
+    <div class="header">
+      <a href="./index.html" class="logo">THEO<strong>SPATIAL</strong></a>
+      <nav class="navBar"  id = "mainNav">
+		<a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
+        <a href="index.html">ABOUT</a>
+        <a href="portfolio.html">PROOF OF WORK</a>
+        <a href="bitcoin.html"><i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></a>
+      </nav>
+    </div>
+  </header>
   <div class="main">
     <div class="container">
       <div class = "row">
