--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 		<a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
         <a href="index.html">ABOUT</a>
         <a href="portfolio.html">PROOF OF WORK</a>
-        <a href="orangefosset.html"><i style="color: #F2A900;">ORANGE</i><strong style="color: #2A52BE;">FOSSET</strong></a>
+        <a href="orangefosset.html"><strong style="color: #F2A900;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
         <a href="bitcoin.html"><i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></a>
       </nav>
     </div>
