base content to orangefosset

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -5,40 +5,32 @@
   <!-- using: 
 	skeleton
 	normalize 
-	-->
+	------------------------------------------------ -->
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>theospatial</title>
-  <meta name="description" content="">
+  <title>OrangeFosset</title>
+  <meta name="description" content="Pioneering the Future of Energy and Community Well-being">
   <meta name="author" content="Theodore Lessman">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!--link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"-->
-  <!--link href="https://fonts.googleapis.com/css?family=Work+Sans|Open+Sans:400,600|Poppins:500,900|Space+Mono" rel="stylesheet"-->
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="Skeleton-2.0.4/css/normalize.css">
   <link rel="stylesheet" href="Skeleton-2.0.4/css/skeleton.css">
   <link rel="stylesheet" href="css/theospatial.css">
-  
+
   <!--- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="js/theospatial.js"></script>
-
+  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="img/favicon.png">
-
-  <style>
-  </style>
 
 </head>
 
@@ -46,35 +38,65 @@
   <header>
     <div class="header">
       <a href="./index.html" class="logo">THEO<strong>SPATIAL</strong></a>
-      <nav class="navBar"  id = "mainNav">  
-		    <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
+      <nav class="navBar"  id="mainNav">
+		<a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
         <a href="index.html">ABOUT</a>
         <a href="portfolio.html">PROOF OF WORK</a>
         <a href="karaokecompass.html"><strong style="color: #2A52BE;">KARAOKE</strong><strong style="color: #EE3560;">COMPASS</strong></a>
-        <a href="orangefosset.html"><strong style="color: #F2A900;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
+        <a href="orangefosset.html" class="active"><strong style="color: #F2A900;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
         <a href="bitcoin.html"><i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></a>
       </nav>
     </div>
   </header>
   <div class="main">
     <div class="container">
-      <div class = "row">
-	      
-        <!---div><a href="./doc/Resume_LessmanTheodore_2018.pdf" class="button button-primary">Download resume</a></div-->
-    
-      </div>
-      <div class = "twelve columns" id="contact">
-		    <a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a> 
-		    <a href="https://www.linkedin.com/in/theodorelessman/"><button class = "footbutton">in/theodorelessman</button></a></h2>
-        <a href="https://twitter.com/everythingxbtc"><button class = "footbutton">@everythingxbtc</button></a> 
-		    <a href="https://astral.ninja/npub1enfjvvrakj3fc0r6pn8ftm2dkzpzwvd598lr8hez6qz76zm8vxusf009vf"><button class = "footbutton">npub...usf009vf</button></a> 
-	    </div>
-	    <div class = "1/2 column u-push-right">
-	      <p>&copy 2023 Theodore Lessman</p>
-	    </div>  
-	  </div>
+        <div class="row">
+            <div class="twelve columns">
+                <h1>About OrangeFosset</h1>
+                <p>OrangeFosset: Pioneering the Future of Energy and Community Well-being</p>
+
+                <h2>Our Vision</h2>
+                <p>At OrangeFosset, our vision is to create a sustainable future where technology serves humanity in its most fundamental needs. We believe in a world where every individual has access to basic amenities, powered by the very innovations that drive our economy forward. Our project is more than a technological breakthrough; it's a commitment to social welfare, environmental sustainability, and economic efficiency.</p>
+
+                <h2>How OrangeFosset Works</h2>
+                <img src="URL-to-Hero-Image" alt="Hero Image: OrangeFosset Facility">
+                <p>An innovative blend of technology and sustainability: The OrangeFosset Facility.</p>
+
+                <h2>Infrastructural Blueprint</h2>
+                <img src="URL-to-Facility-Blueprint" alt="Blueprint of OrangeFosset Facility">
+                <p>A detailed blueprint of our state-of-the-art facility, showcasing the integration of technology and utility.</p>
+
+                <h2>The Journey of Water</h2>
+                <img src="URL-to-Water-Flow-Diagram" alt="Water Flow Diagram">
+                <p>Track the journey of water through the OrangeFosset system, highlighting our commitment to efficiency and sustainability.</p>
+
+                <h2>Energy and Price Dynamics</h2>
+                <img src="URL-to-Energy-and-Price-Dynamics-Graphs" alt="Energy and Price Dynamic Graphs">
+                <p>Understand the interplay between energy input, mining productivity, and the pricing of our services.</p>
+
+                <p>Join Us in Fostering Innovation for Social Good</p>
+                <p>OrangeFosset is more than a system; it's a movement towards a future where technology and welfare go hand in hand. We invite you to join us in this journey, to support a project that stands at the intersection of innovation, sustainability, and community service. Together, we can redefine what's possible, turning the heat of today's technology into the warm embrace of community well-being.</p>
+                <p>For media inquiries, partnerships, or to learn more, <a href="URL-to-Contact-Page">contact us</a>.</p>
+                <p><strong>OrangeFosset</strong>: Technology, Community, Sustainability.</p>
+            </div>
+        </div>
+    </div>
   </div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns" id="contact">
+          <a href="mailto:theospatial@gmail.com"><button class="footbutton">theospatial@gmail.com</button></a> 
+          <a href="https://www.linkedin.com/in/theodorelessman/"><button class="footbutton">in/theodorelessman</button></a>
+          <a href="https://twitter.com/everythingxbtc"><button class="footbutton">@everythingxbtc</button></a> 
+          <a href="https://astral.ninja/npub1enfjvvrakj3fc0r6pn8ftm2dkzpzwvd598lr8hez6qz76zm8vxusf009vf"><button class="footbutton">npub...usf009vf</button></a> 
+        </div>
+        <div class="one-half column" style="margin-top: 25px">
+          &copy; 2023 Theodore Lessman
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
-
