partial of orangefosset

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -43,7 +43,7 @@
         <a href="index.html">ABOUT</a>
         <a href="portfolio.html">PROOF OF WORK</a>
         <a href="karaokecompass.html"><strong style="color: #2A52BE;">KARAOKE</strong><strong style="color: #EE3560;">COMPASS</strong></a>
-        <a href="orangefosset.html" class="active"><strong style="color: #F2A900;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
+        <a href="orangefosset.html" class="active"><strong style="color: #FF9900;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
         <a href="bitcoin.html"><i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></a>
       </nav>
     </div>
@@ -51,20 +51,46 @@
   <div class="main">
     <div class="container">
         <div class="row">
-            <div class="twelve columns">
-                <h1>About OrangeFosset</h1>
-                <p>OrangeFosset: Pioneering the Future of Energy and Community Well-being</p>
+            <div id="banner" class="twelve columns">
+              <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
+              <h2 id="statement"> <strong style="color: #FF9900;">ORANGE</strong>&#215<strong style="color: #2A52BE;">FOSSET</strong></h2>
+              <div id="bitcoin" class = "twelve columns">
+              </br>
+                <a href="./shower.pdf" style="text-decoration: none;"><button style="color: #FF9900; display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a>
+              </br></br>
+                <strong>BITCOIN IS FOR HUMAN RIGHTS.
+                </br>THE RIGHT TO FINANCIAL INCLUSION  
+                </br>THE RIGHT TO PRIVACY
+                </br>THE RIGHT TO PROPERTY
+                </br>THE RIGHT TO FREE SPEECH
+                </br>THE RIGHT TO EQUALITY
+                </br>THE RIGHT TO WORK
+                </br>THE RIGHT TO HEALTH
+                </br>THE RIGHT TO WATER
+                </br>THE RIGHT TO SHOWER 
+                </br></strong>
 
-                <h2>Our Vision</h2>
-                <p>At OrangeFosset, our vision is to create a sustainable future where technology serves humanity in its most fundamental needs. We believe in a world where every individual has access to basic amenities, powered by the very innovations that drive our economy forward. Our project is more than a technological breakthrough; it's a commitment to social welfare, environmental sustainability, and economic efficiency.</p>
+                <h2>The Vision</h2>
+                <p>to create a sustainable future where technology serves humanity in its most fundamental needs. We believe in a world where every individual has access to basic amenities, powered by the very innovations that drive our economy forward. Our project is more than a technological breakthrough; it's a commitment to social welfare, environmental sustainability, and economic efficiency.</p>
 
                 <h2>How OrangeFosset Works</h2>
                 <img src="URL-to-Hero-Image" alt="Hero Image: OrangeFosset Facility">
                 <p>An innovative blend of technology and sustainability: The OrangeFosset Facility.</p>
 
-                <h2>Infrastructural Blueprint</h2>
+                <p>OrangeFosset's unique system interlinks Bitcoin mining operations with a sophisticated water heating mechanism. 
+                  <strong>This dual-functionality not only maximizes energy efficiency but also turns the only waste byproduct - heat - into a valuable resource.</strong> 
+                  Our system operates in a cycle of sustainability:</p>
+                <ol>
+                    <li>Electricity Input for Bitcoin Mining: We start with renewable energy, fueling the mining rigs responsible for securing and expanding the Bitcoin network.</li>
+                    <li>Heat Recovery and Water Heating: The heat generated from mining is not wasted. Instead, it's captured and used to heat water, which is then made available to the community.</li>
+                    <li>Community Service: The provision of hot water supports local needs: providing showers those who need it, and potentially partnering with local businesses and organizations for their hot water needs, ensuring that the benefits of our innovation reach everyone.</li>
+                </ol>
+
+                <h2>The Container Build</h2>
                 <img src="URL-to-Facility-Blueprint" alt="Blueprint of OrangeFosset Facility">
                 <p>A detailed blueprint of our state-of-the-art facility, showcasing the integration of technology and utility.</p>
+
+                <p>Our facilities are designed with precision, integrating the most efficient of Bitcoin mining hardware with advanced heat exchange systems. This seamless integration ensures not just the optimal operation of our mining activities but also the efficient transfer of heat to water, minimizing energy loss and maximizing community benefit.</p>
 
                 <h2>The Journey of Water</h2>
                 <img src="URL-to-Water-Flow-Diagram" alt="Water Flow Diagram">
