partial of orangefosset orange revision

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -51,12 +51,12 @@
   <div class="main">
     <div class="container">
         <div class="row">
-            <div id="banner" class="twelve columns">
+            <div style = "color: #FFFFFF; background-color: #FF9900;" id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
-              <h2 id="statement"> <strong style="color: #FF9900;">ORANGE</strong>&#215<strong style="color: #2A52BE;">FOSSET</strong></h2>
+              <h2 id="statement"> <strong">ORANGE</strong>FOSSET</strong></h2>
               <div id="bitcoin" class = "twelve columns">
               </br>
-                <a href="./shower.pdf" style="text-decoration: none;"><button style="color: #FF9900; display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a>
+                <a href="./shower.pdf" style="text-decoration: none;"><button style="display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a>
               </br></br>
                 <strong>BITCOIN IS FOR HUMAN RIGHTS.
                 </br>THE RIGHT TO FINANCIAL INCLUSION  
@@ -66,8 +66,8 @@
                 </br>THE RIGHT TO EQUALITY
                 </br>THE RIGHT TO WORK
                 </br>THE RIGHT TO HEALTH
-                </br>THE RIGHT TO WATER
-                </br>THE RIGHT TO SHOWER 
+                </br>THE RIGHT TO WATER</strong>
+                </br><strong style="color: #2A52BE;">THE RIGHT TO SHOWER 
                 </br></strong>
 
                 <h2>The Vision</h2>
