partial of orangefosset orange revision 2

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -48,15 +48,15 @@
       </nav>
     </div>
   </header>
-  <div class="main">
+  <div style = "color: #FFFFFF; background-color: #FF9900;" class="main">
     <div class="container">
         <div class="row">
-            <div style = "color: #FFFFFF; background-color: #FF9900;" id="banner" class="twelve columns">
+            <div  id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
-              <h2 id="statement"> <strong">ORANGE</strong>FOSSET</strong></h2>
+              <h2 id="statement"> <strong">ORANGE</strong><strong style="color: #2A52BE">FOSSET</strong></h2>
               <div id="bitcoin" class = "twelve columns">
               </br>
-                <a href="./shower.pdf" style="text-decoration: none;"><button style="display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a>
+                <a href="./shower.pdf" style="text-decoration: none;"><button style="color:#FFFFFF; display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a>
               </br></br>
                 <strong>BITCOIN IS FOR HUMAN RIGHTS.
                 </br>THE RIGHT TO FINANCIAL INCLUSION  
