partial of orangefosset orange revision 3

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -48,8 +48,8 @@
       </nav>
     </div>
   </header>
-  <div style = "color: #FFFFFF; background-color: #FF9900;" class="main">
-    <div class="container">
+  <div class="main">
+    <div style = "color: #FFFFFF; background-color: #FF9900;" class="container">
         <div class="row">
             <div  id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
