partial of orangefosset orange revision 4

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -36,20 +36,20 @@
 
 <body>
   <header>
-    <div class="header">
+    <div style = "color: #FFFFFF; background-color: #F7931A;" class="header">
       <a href="./index.html" class="logo">THEO<strong>SPATIAL</strong></a>
       <nav class="navBar"  id="mainNav">
-		<a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
+		    <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
         <a href="index.html">ABOUT</a>
         <a href="portfolio.html">PROOF OF WORK</a>
         <a href="karaokecompass.html"><strong style="color: #2A52BE;">KARAOKE</strong><strong style="color: #EE3560;">COMPASS</strong></a>
-        <a href="orangefosset.html" class="active"><strong style="color: #FF9900;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
-        <a href="bitcoin.html"><i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></a>
+        <a href="orangefosset.html" class="active"><strong style="color: #F7931A;">ORANGE</strong><strong style="color: #2A52BE;">FOSSET</strong></a>
+        <a href="bitcoin.html"><i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F7931A;">BITCOIN</strong></a>
       </nav>
     </div>
   </header>
   <div class="main">
-    <div style = "color: #FFFFFF; background-color: #FF9900;" class="container">
+    <div style = "color: #FFFFFF; background-color: #F7931A;" class="container">
         <div class="row">
             <div  id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
