partial of orangefosset orange revision 5

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -36,7 +36,7 @@
 
 <body>
   <header>
-    <div style = "color: #FFFFFF; background-color: #F7931A;" class="header">
+    <div class="header">
       <a href="./index.html" class="logo">THEO<strong>SPATIAL</strong></a>
       <nav class="navBar"  id="mainNav">
 		    <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
@@ -48,8 +48,8 @@
       </nav>
     </div>
   </header>
-  <div class="main">
-    <div style = "color: #FFFFFF; background-color: #F7931A;" class="container">
+  <div style = "color: #FFFFFF; background-color: #F7931A;" class="main">
+    <div class="container">
         <div class="row">
             <div  id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
