partial of orangefosset orange revision 6

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <div style = "color: #FFFFFF; background-color: #F7931A;" class="main">
-    <div class="container">
+    <div style = "color: #FFFFFF; background-color: #F7931A;" class="container">
         <div class="row">
             <div  id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
